opam-version: "1.2"
maintainer: "marcoonroad@gmail.com"
authors: ["Marco Aurélio da Silva"]
homepage: "https://github.com/marcoonroad/hieroglyphs"
bug-reports: "https://github.com/marcoonroad/hieroglyphs/issues"
dev-repo: "https://github.com/marcoonroad/hieroglyphs.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "re" {>= "1.8.0"}
  "core" {>= "v0.11.3"}
  "digestif" {>= "0.7"}
  "nocrypto" {>= "0.5.4-1"}
  "dune" {build}
  "alcotest" {test}
]
