opam-version: "1.2"
maintainer: "marcoonroad@gmail.com"
authors: ["Marco Aurélio da Silva"]
homepage: "https://github.com/marcoonroad/hieroglyphs"
bug-reports: "https://github.com/marcoonroad/hieroglyphs/issues"
dev-repo: "https://github.com/marcoonroad/hieroglyphs.git"
synopsis: "Quantum-resistant, purely Hash-based, Stateful, One-Time Digital Signatures for OCaml"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "build" "@test/spec/runtest" "-p" name]

depends: [
  "lwt" {>= "4.1.0"}
  "irmin-unix" {>= "1.3.3"}
  "irmin-watcher" {>= "0.4.0"}
  "hex" {>= "1.4.0"}
  "re" {>= "1.8.0"}
  "core" {>= "v0.11.3"}
  "digestif" {>= "0.7.1"}
  "nocrypto" {>= "0.5.4-1"}
  "dune" {build & >= "1.5.1"}
  "bisect_ppx" {>= "1.3.4"}
  "alcotest" {>= "0.8.4"}
]
